layout setting in dashbaord

--- a/public/assets/admin/plugins/datatables/extensions/TableTools/examples/bootstrap.html
+++ b/public/assets/admin/plugins/datatables/extensions/TableTools/examples/bootstrap.html
@@ -7,7 +7,7 @@
 
 	<title>TableTools example - Bootstrap styling</title>
 	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../../Plugins/integration/bootstrap/3/dataTables.bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../../Plugins/integration/bootstrap/3/dataTables.bootstrap4.min.css">
 	<link rel="stylesheet" type="text/css" href="../../../examples/resources/syntax/shCore.css">
 	<link rel="stylesheet" type="text/css" href="../../../examples/resources/demo.css">
 	<style type="text/css" class="init">
@@ -579,7 +579,7 @@ $(document).ready(function() {
 
 					<ul>
 						<li><a href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css</a></li>
-						<li><a href="../../Plugins/integration/bootstrap/3/dataTables.bootstrap.css">../../Plugins/integration/bootstrap/3/dataTables.bootstrap.css</a></li>
+						<li><a href="../../Plugins/integration/bootstrap/3/dataTables.bootstrap4.min.css">../../Plugins/integration/bootstrap/3/dataTables.bootstrap4.min.css</a></li>
 					</ul>
 				</div>
 
